--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,20 @@
 html {
   scroll-behavior: smooth;
 }
+header {
+background: #432fbf;
+  padding: 10px 0;
+font-size: 20px;
+border-radius: 0 0 33px 33px;
+  top: 0;
+  z-index: 1000;
+  transition: background-color 0.3s ease, border-radius 0.3s ease;
+}
+
+.active {
+  background: rgba(255, 255, 255, 0.25);
+    border-radius: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+  min-width: 90px;
+}
