--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Ga+Maamli&display=swap');@tailwind base;
 @tailwind components;
 @tailwind utilities;
 html {
   scroll-behavior: smooth;
 }
-
+.black-ops-one-regular {
+  font-family: "Black Ops One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 header {
 border-radius: 0 0 25px 25px;
   top: 0;
@@ -20,14 +24,57 @@ border-radius: 0 0 25px 25px;
   min-width: 90px;
 }
 /* Create a new CSS file (e.g., DynamicCaption.css) */
-.caption {
-  font-size: 24px;
-  font-weight: bold;
-  margin: 20px;
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
+.highlight {
+  color: blue;
+  font-size: x-large;
+   text-shadow: 
+    2px 2px 2px #f0f0f0,  /* Light gray inner shadow */
+    -2px -2px 5px #333333;
+ 
+}
+.page {
+  display: grid;
+  min-height: 100vh;
 }
 
-.caption.fade-out {
-  opacity: 0;
+.page__txt {
+  margin: auto;
+}
+
+.txt {
+  color: transparent;
+  display: flex;
+  flex-wrap: wrap;
+
+  /* Ensures that long text will wrap within the container */
+  font-weight: bold;
+  font-size: 40px;
+  margin-bottom: 136px;
+  /* Fixed font size */
+  text-transform: uppercase;
+}
+
+.txt__character {
+  animation: fall 8s linear infinite;
+  animation-delay: calc(var(--i) * 200ms);
+}
+
+.txt__space {
+  width: 0.5em;
+  /* Adjust width as needed for spacing between words */
+}
+
+@keyframes fall {
+
+  50%,
+  80% {
+    color: hsl(calc(var(--i) * 25), 100%, 50%);
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  95%,
+  100% {
+    opacity: 0;
+  }
 }
