--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,21 @@ border-radius: 0 0 25px 25px;
 }
 
 
-
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-image: url("https://i.ibb.co/d4g03Jt/pexels-gabriel-peter-219375-696680.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  padding-top: 60px;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
 .loader-container {
   display: flex;
   justify-content: center;
@@ -114,4 +128,10 @@ border-radius: 0 0 25px 25px;
   100% {
     opacity: 0;
   }
+}
+
+
+/* Curser Pointer Styling */
+.svg {
+  cursor: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/heart.svg), auto;
 }
