--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,7 @@ border-radius: 0 0 25px 25px;
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url("https://i.ibb.co/d4g03Jt/pexels-gabriel-peter-219375-696680.jpg");
+  background-image: url("/public/myPicForBg.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
