--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ border-radius: 0 0 25px 25px;
 
 
 body {
-  margin: 0;
+      /* Adjust the opacity as needed */  margin: 0;
   font-family: Arial, sans-serif;
   background-image: url("/public/myPicForBg.jpeg");
   background-size: cover;
@@ -136,3 +136,24 @@ body::-webkit-scrollbar {
   cursor: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/heart.svg), auto;
 }
 
+/* Spinner When the form is submiting */
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  /* Light grey background */
+  border-left: 4px solid black;
+  /* Black spinner color */
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
