--- a/src/index.css
+++ b/src/index.css
@@ -89,18 +89,20 @@ border-radius: 0 0 25px 25px;
 body {
       /* Adjust the opacity as needed */  margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url("/public/myPicForBg.jpeg");
+  background-image: url("/myPicForBg.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  padding-top: 60px;
+  /* padding-top: 60px; */
 }
 body::-webkit-scrollbar {
   display: none;
 }
+/* SubmittedForms.css */
+
 .loader-container {
   display: flex;
   justify-content: center;
