--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ body {
     /* Adjust the opacity as needed */
     margin: 0;
     font-family: Arial, sans-serif;
-    background-image: url("/mdProPic.jpeg");
+    background-image: url("/public/mdProPic.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
