--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,7 @@ body::-webkit-scrollbar {
   }
 }
 
-@media (min-width: 412px) {
+@media (max-width: 460px) {
 body {
     /* Adjust the opacity as needed */
     margin: 0;
