--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,11 @@ header nav ul li.active a {
 }
 
 .skill {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   position: relative;
   background: #333;
   border-radius: 20px;
-  height: 30px;
+  height: 20px;
   overflow: hidden;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
@@ -32,7 +32,7 @@ header nav ul li.active a {
   height: 100%;
   width: 100%;
   padding: 0 10px;
-  line-height: 30px;
+  /* line-height: 30px; */
   color: #fff;
   font-weight: bold;
   text-align: left;
