--- a/src/index.css
+++ b/src/index.css
@@ -168,3 +168,10 @@ body {
     /* padding-top: 60px; */
   }
 }
+
+@media (min-width: 340px) and (max-width: 412px) {
+  .a70 {
+    /* Add your styles here */
+    width:376px
+  }
+}
