--- a/src/CSS/Skill.css
+++ b/src/CSS/Skill.css
@@ -134,36 +134,56 @@
     animation: postgresql 2s forwards;
     /* Add forwards to keep final width */
 }
-
-.bar {
-    position: relative;
-    width: 100%;
-    background-color: #4a5568;
-    /* bg-gray-700 */
-    border-radius: 0.5rem;
-    /* rounded-lg */
-    overflow: hidden;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #333;
 }
 
-.bar span {
-    display: block;
-    height: 100%;
-    transition: width 0.5s ease;
-    /* Smooth transition for width */
+
+h1 {
+    /*change font family of heading*/
+    font-family: sans-serif;
+}
+
+li {
+    /*style the li tag*/
+    list-style-type: none;
+    font-family: sans-serif;
 }
 
 .skills {
-    animation: fadeIn 0.5s ease;
-    /* Optional fade-in animation for the whole section */
+    /*style the text*/
+    width: 500px;
+    margin: 60px auto;
+    color: #fff;
 }
 
-/* Optional: Animation for the whole skill section */
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
+.skills li {
+    /*set margin of li*/
+    margin: 20px 0;
+}
 
-    to {
-        opacity: 1;
-    }
+.bar {
+    /*style the bar*/
+    background-color: #353b48;
+    display: block;
+    height: 2px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 0 10px #2187e7b3;
+}
+
+.bar span {
+    /*style the span tag*/
+    height: 2px;
+    float: left;
+    background-color: #2187e7;
+}
+
+.html {
+    /*set skills and animation of html*/
+    width: 80%;
+    animation: html 2s;
 }
