--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,12 @@ body {
   .a70 {
     /* Add your styles here */
     width:382px
+
+
+  }
+  .a70va{
+width:350px;
+height: 715px;
   }
     .skills {
       /*style the text*/
