--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.stylish{
+
+             font-family: 'Dancing Script', cursive;
+            font-size: 3rem;
+            font-weight: 700;
+            letter-spacing: 3px;
+            /* text-transform: uppercase; */
+            color: rgb(80, 180, 255);
+            /* Electric Blue */
+            text-shadow: 2px 2px 10px rgb(0, 26, 255);
+            /* Glowing Effect */
+        
+
+}
 html {
   scroll-behavior: smooth;
 }
