--- a/src/index.css
+++ b/src/index.css
@@ -39,13 +39,19 @@ border-radius: 0 0 25px 25px;
 }
 
 .active {
-  background: rgb(18, 9, 95);
-    border-radius: 5px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-  min-width: 90px;
-  
+  background: linear-gradient(45deg, rgb(18, 9, 95), rgb(50, 20, 150)); /* Smooth gradient */
+  color: white; /* Ensure text is readable */
+  padding: 0px 12px;
+  border-radius: 5px; /* Rounded corners */
+  font-weight: bold; /* Make the text stand out */
+  transition: all 0.3s ease-in-out; /* Smooth transition effect */
 }
+
+.active:hover {
+  background: linear-gradient(45deg, rgb(50, 20, 150), rgb(18, 9, 95)); /* Reverse gradient on hover */
+  transform: scale(1.05); /* Slight enlargement effect */
+}
+
 /* DynamicCaption.css */
 
 .highlight {
@@ -105,7 +111,7 @@ border-radius: 0 0 25px 25px;
 body {
       /* Adjust the opacity as needed */  margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url("/myPicForBg.jpeg");
+  background-image: url("/myPicForBg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -192,6 +198,7 @@ body {
   .a70 {
     /* Add your styles here */
     width:382px;
+
 
 
   }
