--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,8 @@
             font-size: 3rem;
             font-weight: 700;
             letter-spacing: 3px;
-            /* text-transform: uppercase; */
             color: rgb(80, 180, 255);
-            
-            /* Electric Blue */
-            text-shadow: 2px 2px 10px rgb(0, 26, 255);
-            /* Glowing Effect */
-        
+            text-shadow: 2px 2px 10px rgb(0, 26, 255);        
 
 }
 html {
@@ -107,11 +102,31 @@ border-radius: 0 0 25px 25px;
   }
 }
 
+@keyframes slideIn {
+  from {
+    transform: scaleX(0);
+  }
 
+  to {
+    transform: scaleX(1);
+  }
+}
+
+@keyframes pulse {
+
+  0%,
+  100% {
+    opacity: 0.5;
+  }
+
+  50% {
+    opacity: 0.1;
+  }
+}
 body {
       /* Adjust the opacity as needed */  margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url("/myPicForBg.jpg");
+  /* background-image: url("/myPicForBg.jpg"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -180,7 +195,7 @@ body {
     /* Adjust the opacity as needed */
     margin: 0;
     font-family: Arial, sans-serif;
-    background-image: url("/protrait.jpeg");
+    /* background-image: url("/protrait.jpeg"); */
     
     background-size: cover;
     background-position: center;
